# Aula-20-01-Tarefa-1

./: CMakeLists.txt  LEDMATRIZ.c  README.md  animations.c  animations.h  diagram.json  main.c  matriz7.c  wokwi.toml  ws2812b.c
features/: PIO.c  desenho.c  funcoes.c  keyPad4x4.c
